--- a/src/ui/Emulin.glade
+++ b/src/ui/Emulin.glade
@@ -5,7 +5,9 @@
   <object class="GtkApplicationWindow" id="VentanaInicio">
     <property name="width_request">800</property>
     <property name="height_request">600</property>
+    <property name="visible">True</property>
     <property name="can_focus">False</property>
+    <property name="has_focus">True</property>
     <property name="title" translatable="yes">EmuLIN</property>
     <property name="window_position">center</property>
     <property name="icon_name">network-wired</property>
