--- a/src/ui/Emulin.glade
+++ b/src/ui/Emulin.glade
@@ -12,48 +12,24 @@
     <property name="window_position">center</property>
     <property name="icon_name">network-wired</property>
     <child>
-      <placeholder/>
-    </child>
-    <child>
-      <object class="GtkPaned">
+      <object class="GtkNotebook">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
+        <property name="tab_pos">left</property>
         <child>
-          <object class="GtkButtonBox">
+          <object class="GtkFixed">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="orientation">vertical</property>
-            <property name="layout_style">start</property>
-            <child>
-              <object class="GtkButton" id="VentanaInicioBotonDatabase">
-                <property name="label" translatable="yes">Database</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-              </object>
-              <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton" id="VentanaInicioBotonSimulacion">
-                <property name="label" translatable="yes">Simulation</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-              </object>
-              <packing>
-                <property name="expand">True</property>
-                <property name="fill">True</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
+          </object>
+        </child>
+        <child type="tab">
+          <object class="GtkLabel">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="label" translatable="yes">Configuration</property>
           </object>
           <packing>
-            <property name="resize">False</property>
-            <property name="shrink">True</property>
+            <property name="tab_fill">False</property>
           </packing>
         </child>
         <child>
@@ -61,7 +37,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <child>
-              <object class="GtkFixed" id="VentanaInicioGeneralPanel">
+              <object class="GtkFixed">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
               </object>
@@ -77,7 +53,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkFixed" id="VentanaInicioNodesPanel">
+              <object class="GtkFixed">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
               </object>
@@ -97,7 +73,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkFixed" id="VentanaInicioSignalsPanel">
+              <object class="GtkFixed">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
               </object>
@@ -117,7 +93,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkFixed" id="VentanaInicioFramesPanel">
+              <object class="GtkFixed">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
               </object>
@@ -137,7 +113,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkFixed" id="VentanaInicioSchedulesPanel">
+              <object class="GtkFixed">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
               </object>
@@ -158,8 +134,39 @@
             </child>
           </object>
           <packing>
-            <property name="resize">True</property>
-            <property name="shrink">True</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child type="tab">
+          <object class="GtkLabel">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="label" translatable="yes">Database</property>
+          </object>
+          <packing>
+            <property name="position">1</property>
+            <property name="tab_fill">False</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="label" translatable="yes">TODO</property>
+          </object>
+          <packing>
+            <property name="position">2</property>
+          </packing>
+        </child>
+        <child type="tab">
+          <object class="GtkLabel">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="label" translatable="yes">Simulation</property>
+          </object>
+          <packing>
+            <property name="position">2</property>
+            <property name="tab_fill">False</property>
           </packing>
         </child>
       </object>
