--- a/src/ui/Emulin.glade
+++ b/src/ui/Emulin.glade
@@ -39,6 +39,7 @@
                 <property name="width_request">580</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="action">save</property>
                 <property name="title" translatable="yes"/>
               </object>
               <packing>
