--- a/src/ui/Emulin.glade
+++ b/src/ui/Emulin.glade
@@ -167,6 +167,114 @@
               <object class="GtkFixed">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <child>
+                  <object class="GtkFrame">
+                    <property name="width_request">680</property>
+                    <property name="height_request">150</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label_xalign">0.019999999552965164</property>
+                    <property name="shadow_type">out</property>
+                    <child>
+                      <object class="GtkAlignment">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <child>
+                          <object class="GtkFixed">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <child>
+                              <object class="GtkLabel">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="label" translatable="yes">Name</property>
+                              </object>
+                              <packing>
+                                <property name="x">20</property>
+                                <property name="y">20</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="label" translatable="yes">Timebase (ms)</property>
+                              </object>
+                              <packing>
+                                <property name="x">20</property>
+                                <property name="y">50</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="label" translatable="yes">Jitter (ms)</property>
+                              </object>
+                              <packing>
+                                <property name="x">20</property>
+                                <property name="y">80</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkEntry" id="PanelDatabaseMasterName">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="max_length">64</property>
+                                <property name="max_width_chars">64</property>
+                                <property name="truncate_multiline">True</property>
+                                <property name="caps_lock_warning">False</property>
+                              </object>
+                              <packing>
+                                <property name="x">140</property>
+                                <property name="y">15</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkEntry" id="PanelDatabaseMasterTimebase">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="max_length">5</property>
+                                <property name="width_chars">5</property>
+                                <property name="max_width_chars">5</property>
+                                <property name="text" translatable="yes">0.0</property>
+                              </object>
+                              <packing>
+                                <property name="x">140</property>
+                                <property name="y">45</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkEntry" id="PanelDatabaseMasterJitter">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="max_length">5</property>
+                                <property name="width_chars">5</property>
+                                <property name="max_width_chars">5</property>
+                                <property name="text" translatable="yes">0.0</property>
+                              </object>
+                              <packing>
+                                <property name="x">140</property>
+                                <property name="y">75</property>
+                              </packing>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child type="label">
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">Master</property>
+                      </object>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="x">5</property>
+                    <property name="y">5</property>
+                  </packing>
+                </child>
               </object>
               <packing>
                 <property name="position">1</property>
