--- a/src/ui/Emulin.glade
+++ b/src/ui/Emulin.glade
@@ -495,7 +495,7 @@
             <property name="can_focus">False</property>
             <property name="layout_style">end</property>
             <child>
-              <object class="GtkButton" id="Cancel">
+              <object class="GtkButton" id="VentanaNodoEsclavoCancel">
                 <property name="label" translatable="yes">Cancel</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -508,7 +508,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="Accept">
+              <object class="GtkButton" id="VentanaNodoEsclavoAccept">
                 <property name="label" translatable="yes">Accept</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -543,7 +543,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="Name">
+              <object class="GtkEntry" id="VentanaNodoEsclavoName">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="width_chars">20</property>
@@ -567,7 +567,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkComboBoxText" id="ProtocolVersion">
+              <object class="GtkComboBoxText" id="VentanaNodoEsclavoProtocolVersion">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="active">0</property>
@@ -594,7 +594,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="InitialNAD">
+              <object class="GtkEntry" id="VentanaNodoEsclavoInitialNAD">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="max_length">4</property>
@@ -618,7 +618,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="ConfiguredNAD">
+              <object class="GtkEntry" id="VentanaNodoEsclavoConfiguredNAD">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="max_length">4</property>
@@ -642,7 +642,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="SupplierID">
+              <object class="GtkEntry" id="VentanaNodoEsclavoSupplierID">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="width_chars">8</property>
@@ -664,7 +664,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="FunctionID">
+              <object class="GtkEntry" id="VentanaNodoEsclavoFunctionID">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="width_chars">6</property>
@@ -686,7 +686,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="Variant">
+              <object class="GtkEntry" id="VentanaNodoEsclavoVariant">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="width_chars">4</property>
@@ -708,7 +708,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkComboBoxText" id="ResponseErrorSignal">
+              <object class="GtkComboBoxText" id="VentanaNodoEsclavoResponseErrorSignal">
                 <property name="width_request">350</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
@@ -732,7 +732,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="P2_min">
+              <object class="GtkEntry" id="VentanaNodoEsclavoP2_min">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="width_chars">6</property>
@@ -755,7 +755,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="ST_min">
+              <object class="GtkEntry" id="VentanaNodoEsclavoST_min">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="width_chars">6</property>
@@ -777,7 +777,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="N_As_timeout">
+              <object class="GtkEntry" id="VentanaNodoEsclavoN_As_timeout">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="width_chars">6</property>
@@ -800,7 +800,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="N_Cr_timeout">
+              <object class="GtkEntry" id="VentanaNodoEsclavoN_Cr_timeout">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="width_chars">6</property>
@@ -827,7 +827,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <child>
-                          <object class="GtkTreeView" id="ConfigFrameList1">
+                          <object class="GtkTreeView" id="VentanaNodoEsclavoConfigFrameList1">
                             <property name="width_request">510</property>
                             <property name="height_request">150</property>
                             <property name="visible">True</property>
@@ -842,7 +842,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="ConfigFrameDelete">
+                          <object class="GtkButton" id="VentanaNodoEsclavoConfigFrameDelete">
                             <property name="label" translatable="yes">Delete</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
@@ -854,7 +854,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="ConfigFrameNew">
+                          <object class="GtkButton" id="VentanaNodoEsclavoConfigFrameNew">
                             <property name="label" translatable="yes">New</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
@@ -866,7 +866,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="ConfigFrameEdit">
+                          <object class="GtkButton" id="VentanaNodoEsclavoConfigFrameEdit">
                             <property name="label" translatable="yes">Edit</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
